# youtube-summarizer

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  TODO.md  claude.md  config.example.json  index.html  main.py  package-lock.json  package.json  requirements.txt  start.bat  start.sh
app/: ai_client.py  automation.py  bridge.py  config.py  database.py  models.py  youtube.py
app/www/: app.js  index.html  style.css
docs/: ai-config-refactor.md
legacy-python/: claude.md
legacy-python/app/: ai_client.py  automation.py  bridge.py
legacy-python/app/www/: app.js  index.html
src/: ai-config.ts  dom-utils.ts  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  automation.rs  commands.rs  lib.rs  main.rs  models.rs  storage.rs  youtube.rs
src-tauri/src/ai_config/: client.rs  mod.rs  store.rs  types.rs
